configure access control with environment variables

--- a/serverless.yml
+++ b/serverless.yml
@@ -10,6 +10,8 @@ provider:
       Action:
         - "ses:SendEmail"
       Resource: ["*"]
+  environment:
+    AllowOrigin: 'chris.dickinson.ch'
 
 # you can define service wide environment variables here
 #  environment:
